--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           host: 185.233.119.194
           username: root
-          key: ${{ secrets.TEST_2}}
+          key: ${{ secrets.MY_KEY}}
           port: 22
           envs: BASE_PATH
           script: |
